fixed broken image on mobile device.

--- a/crunchify-social-sharing.css
+++ b/crunchify-social-sharing.css
@@ -10,6 +10,8 @@
     box-shadow: inset 0 -3px 0 rgba(0,0,0,.2);
     -moz-box-shadow: inset 0 -3px 0 rgba(0,0,0,.2);
     -webkit-box-shadow: inset 0 -3px 0 rgba(0,0,0,.2);
+    margin-top: 2px;
+    display: inline-block;
 }
  
 .crunchify-link:hover,.crunchify-link:active {
